# ndarray-fftw

./: .gitignore  .travis.yml  Cargo.toml  README.md
fftw3-sys/: Cargo.toml  build.rs  lib.rs
src/: impl_1d.rs  impl_array1d.rs  impl_vec.rs  lib.rs  one_dim.rs  prelude.rs  traits.rs  types.rs
tests/: 1d.rs
