[package]
name = "ndarray-fftw"
version = "0.1.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]

[dependencies]
ndarray = "0.7"
num-complex = "0.1.35"
num-traits = "*"

[dependencies.fftw3-sys]
path = "fftw3-sys"

[dev-dependencies]
rand = "0.3.14"
ndarray-rand = "0.3"
float-cmp = "0.2.3"

[dev-dependencies.ndarray-numtest]
git = "http://github.com/termoshtt/ndarray-numtest.git"
